Fix color star-text to visible-20

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -148,7 +148,7 @@
 
   display: inline-block;
 
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1;
   color: #ffd93d;
 }
